network_policies/deny-all-except-kube-system.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  order: 5000
  selector: '!has(k8s-app)'
  types:
  - Ingress
